--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ img {
 /* header */
 .page-header {
     border-bottom: 1px solid rgb(231 233 252);
+    box-shadow: 0 1px 6px 0 rgba(46 47 66 / 0.08), 0 1px 1px 0 rgba(46 47 66 / 0.16), 0 2px 1px 0 rgba(46 47 66 / 0.08);
 }
 
 .header-container {
@@ -83,6 +84,22 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: rgb(46 47 66);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.current {
+    position: relative;
+}
+
+.nav-link.current::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: rgb(64 75 191);
+    border-radius: 2px;
 }
 
 .contacts {
@@ -104,11 +121,14 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: rgb(67 68 85);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus,
+.nav-link.current {
     color: rgb(64 75 191);
 }
 
@@ -118,6 +138,13 @@ img {
     background-color: rgb(46 47 66);
     padding-top: 188px;
     padding-bottom: 188px;
+    max-width: 1440px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-bg.jpg");
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: center;
 }
 
 .main-title {
@@ -145,7 +172,7 @@ img {
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0 0 0 / 0.15);
     cursor: pointer;
-    background: rgb(77 90 229);
+    background-color: rgb(77 90 229);
     font-weight: 500;
     font-size: 16px;
     min-width: 169px;
@@ -154,6 +181,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: rgb(255 255 255);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
@@ -193,6 +221,21 @@ img {
 
 .benefits-item {
     width: calc((100% - 3*24px)/4);
+}
+
+.benefits-icon-box {
+    height: 112px;
+    border: 1px solid rgb(142 143 153);
+    border-radius: 4px;
+    background-color: rgb(244 244 253);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+
+.benefits-icon {
+  display: block;
 }
 
 .benefits-title {
@@ -250,7 +293,7 @@ img {
 }
 
 .team-wrapper {
-    padding: 32px 0;
+    padding: 32px 16px;
     text-align: center;
 }
 
@@ -263,7 +306,6 @@ img {
     letter-spacing: 0.02em;
     color: rgb(46 47 66);
     margin-bottom: 8px;
-    padding: 0 16px;
 }
 
 .team-role {
@@ -274,7 +316,40 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: rgb(67 68 85);
-    padding: 0 16px;
+}
+
+.social-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-link {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(77 90 229);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon {
+  fill: rgb(244 244 253);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: rgb(64 75 191);
 }
 
 /* portfolio section */
@@ -309,7 +384,44 @@ img {
 
 .portfolio-item {
     width: calc((100% - 2*24px) / 3);
-}    
+}   
+
+.portfolio-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-link,
+.portfolio-item:focus-within .portfolio-link {
+  box-shadow: 0 2px 1px 0 rgba(46 47 66 / 0.08),
+              0 1px 1px 0 rgba(46 47 66 / 0.16),
+              0 1px 6px 0 rgba(46 47 66 / 0.08);
+}
+
+/* Оверлей */
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-overlay-text {
+  position: absolute;
+  inset: 0;
+  padding: 40px 32px;
+  background-color: rgb(77 90 229);
+  color: rgb(244 244 253);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-overlay-text,
+.portfolio-item:focus-within .portfolio-overlay-text {
+  transform: translateY(0);
+}
 
 .portfolio-category {
     font-weight: 400;
@@ -327,6 +439,15 @@ img {
     padding-top: 100px;
     padding-bottom: 100px;
 }  
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-info {
+  margin-right: 120px;
+}
 
 .footer-logo {
     display: inline-block;
@@ -347,3 +468,42 @@ img {
     color: rgb(244 244 253);
 }
 
+.footer-social-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: rgb(255 255 255);
+  margin-bottom: 16px;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgb(77 90 229);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+  fill: rgb(244 244 253);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: rgb(49 208 170);
+}
