--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ img {
 }
 
 .benefits-icon {
-  display: block;
+    display: block;
 }
 
 .benefits-title {
@@ -293,7 +293,7 @@ img {
 }
 
 .team-wrapper {
-    padding: 32px 16px;
+    padding: 32px 0;
     text-align: center;
 }
 
@@ -327,29 +327,29 @@ img {
 }
 
 .social-item {
-  width: 40px;
-  height: 40px;
+    width: 40px;
+    height: 40px;
 }
 
 .social-link {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(77 90 229);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(77 90 229);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
-  fill: rgb(244 244 253);
+    fill: rgb(244 244 253);
 }
 
 .social-link:hover,
 .social-link:focus {
-  background-color: rgb(64 75 191);
+    background-color: rgb(64 75 191);
 }
 
 /* portfolio section */
@@ -387,40 +387,40 @@ img {
 }   
 
 .portfolio-link {
-  display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-link,
 .portfolio-item:focus-within .portfolio-link {
-  box-shadow: 0 2px 1px 0 rgba(46 47 66 / 0.08),
-              0 1px 1px 0 rgba(46 47 66 / 0.16),
-              0 1px 6px 0 rgba(46 47 66 / 0.08);
+    box-shadow: 0 2px 1px 0 rgba(46 47 66 / 0.08),
+                0 1px 1px 0 rgba(46 47 66 / 0.16),
+                0 1px 6px 0 rgba(46 47 66 / 0.08);
 }
 
 /* Оверлей */
 .portfolio-thumb {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .portfolio-overlay-text {
-  position: absolute;
-  inset: 0;
-  padding: 40px 32px;
-  background-color: rgb(77 90 229);
-  color: rgb(244 244 253);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+    position: absolute;
+    inset: 0;
+    padding: 40px 32px;
+    background-color: rgb(77 90 229);
+    color: rgb(244 244 253);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-overlay-text,
 .portfolio-item:focus-within .portfolio-overlay-text {
-  transform: translateY(0);
+    transform: translateY(0);
 }
 
 .portfolio-category {
@@ -441,12 +441,12 @@ img {
 }  
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
+    display: flex;
+    align-items: baseline;
 }
 
 .footer-info {
-  margin-right: 120px;
+    margin-right: 120px;
 }
 
 .footer-logo {
@@ -469,41 +469,41 @@ img {
 }
 
 .footer-social-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: rgb(255 255 255);
-  margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: rgb(255 255 255);
+    margin-bottom: 16px;
 }
 
 .footer-social-list {
-  display: flex;
-  gap: 16px;
+    display: flex;
+    gap: 16px;
 }
 
 .footer-social-item {
-  width: 40px;
-  height: 40px;
+    width: 40px;
+    height: 40px;
 }
 
 .footer-social-link {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: rgb(77 90 229);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgb(77 90 229);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
-  fill: rgb(244 244 253);
+    fill: rgb(244 244 253);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-  background-color: rgb(49 208 170);
+    background-color: rgb(49 208 170);
 }
