--- a/css/styles.css
+++ b/css/styles.css
@@ -358,24 +358,6 @@ img {
     padding-bottom: 120px;
 }
 
-.portfolio-wrapper {
-    padding: 32px 16px;
-    border-bottom: 1px solid rgb(231 233 252);
-    border-left: 1px solid rgb(231 233 252);
-    border-right: 1px solid rgb(231 233 252);
-}
-
-.portfolio-title {
-    font-weight: 500;
-    font-size: 20px;
-
-    /* line-height: 24px; */ 
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: rgb(46 47 66);
-    margin-bottom: 8px;
-}
-
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -384,18 +366,13 @@ img {
 
 .portfolio-item {
     width: calc((100% - 2*24px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }   
 
-.portfolio-link {
-    display: block;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover .portfolio-link,
-.portfolio-item:focus-within .portfolio-link {
-    box-shadow: 0 2px 1px 0 rgba(46 47 66 / 0.08),
-                0 1px 1px 0 rgba(46 47 66 / 0.16),
-                0 1px 6px 0 rgba(46 47 66 / 0.08);
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /* Оверлей */
@@ -406,7 +383,12 @@ img {
 
 .portfolio-overlay-text {
     position: absolute;
-    inset: 0;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
     padding: 40px 32px;
     background-color: rgb(77 90 229);
     color: rgb(244 244 253);
@@ -418,9 +400,25 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .portfolio-overlay-text,
-.portfolio-item:focus-within .portfolio-overlay-text {
-    transform: translateY(0);
+.portfolio-item:hover .portfolio-overlay-text {
+    transform: translateY(0%);
+}
+
+.portfolio-wrapper {
+    padding: 32px 16px;
+    border: 1px solid rgb(231 233 252);
+    border-top: none;
+}
+
+.portfolio-title {
+    font-weight: 500;
+    font-size: 20px;
+
+    /* line-height: 24px; */ 
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: rgb(46 47 66);
+    margin-bottom: 8px;
 }
 
 .portfolio-category {
